--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -10,7 +10,7 @@
 .login-title {
   font-size: 24px;
   margin-bottom: 20px;
-  font-weight: bold;
+  font-weight: 600;
   text-align: center;
 }
 .form-control:focus {
